@@ -1,3 +1,6 @@
+2004-12-06  Jeremy Cribb <jcribb@email.unc.edu>
+	* trigplane.m: prettified code.
+
 2004-12-01  Jeremy Cribb <jcribb@email.unc.edu>
 	* poleflat.m, added.  provides matrix for poleflat geometry.
 
